--- a/m3ua/api/pom.xml
+++ b/m3ua/api/pom.xml
@@ -32,6 +32,8 @@
 		<dependency>
 			<groupId>org.mobicents.protocols.sctp</groupId>
 			<artifactId>sctp-api</artifactId>
+			<!--version>${sctp.version}</version-->
+			<version>3.0.0</version>
 		</dependency>		
 
 		<!-- netty -->
@@ -49,4 +51,11 @@
 	<build>
 		<finalName>${project.artifactId}-${project.version}</finalName>
 	</build>
+
+	<!--repositories>
+		<repository>
+			<id>local-maven-repo</id>
+			<url>file:///${project.basedir}/m3ua/api/local-maven-repo</url>
+		</repository>
+	</repositories-->
 </project>
