--- a/m3ua/impl/pom.xml
+++ b/m3ua/impl/pom.xml
@@ -60,10 +60,12 @@
 		<dependency>
 			<groupId>org.mobicents.protocols.sctp</groupId>
 			<artifactId>sctp-api</artifactId>
+			<version>${sctp.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.mobicents.protocols.sctp</groupId>
 			<artifactId>sctp-impl</artifactId>
+			<version>${sctp.version}</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
@@ -103,4 +105,11 @@
 			</plugin>
 		</plugins>
 	</build>
+
+	<!--repositories>
+		<repository>
+			<id>local-maven-repo</id>
+			<url>file:///${project.basedir}/m3ua/impl/local-maven-repo</url>
+		</repository>
+	</repositories-->
 </project>
