--- a/map/map-api/pom.xml
+++ b/map/map-api/pom.xml
@@ -23,10 +23,12 @@
 		<dependency>
 			<groupId>org.restcomm.protocols.ss7.tcap</groupId>
 			<artifactId>tcap-api</artifactId>
+			<version>${project.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.restcomm.protocols.ss7.sccp</groupId>
 			<artifactId>sccp-api</artifactId>
+			<version>${project.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.mobicents.protocols.asn</groupId>
@@ -39,6 +41,7 @@
 		<dependency>
 			<groupId>org.restcomm.protocols.ss7.isup</groupId>
 			<artifactId>isup-api</artifactId>
+			<version>${project.version}</version>
 		</dependency>
 	</dependencies>
 
